--- a/notebooks/services/document_operations.ipynb
+++ b/notebooks/services/document_operations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "421f96e0",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "87853087",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "ee8125c4",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "603fa735-c0e0-4f72-ae09-688f223a7201\n"
+      "752bb067-7e3d-466e-8584-bf907406fbc0\n"
      ]
     }
    ],
@@ -1953,10 +1953,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "91aef544",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "HTTPError",
+     "evalue": "HTTP error: 400 - {\"type\":\"Bad Request\",\"title\":\"Error\",\"status\":400,\"detail\":\"Requested index is not configured for the client\",\"instance\":\"POST /api/middlemarketgb/indexes/default_semantic_search_index/search\",\"requestId\":\"0HNEFARKG3P4L:00000001\",\"traceId\":\"00-35d80affc2a5c00c3472ee24723e990a-5ebe8796d5c97d15-01\"}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mHTTPError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\mpalacios\\OneDrive - Sompo\\Documents\\Project Repo\\trial_project\\src\\utils\\api_client.py:53\u001b[39m, in \u001b[36mAPIClient._handle_response\u001b[39m\u001b[34m(self, response)\u001b[39m\n\u001b[32m     52\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m53\u001b[39m     \u001b[43mresponse\u001b[49m\u001b[43m.\u001b[49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     54\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m requests.HTTPError \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\mpalacios\\OneDrive - Sompo\\Documents\\Project Repo\\trial_project\\.venv\\Lib\\site-packages\\requests\\models.py:1026\u001b[39m, in \u001b[36mResponse.raise_for_status\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1025\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m http_error_msg:\n\u001b[32m-> \u001b[39m\u001b[32m1026\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m HTTPError(http_error_msg, response=\u001b[38;5;28mself\u001b[39m)\n",
+      "\u001b[31mHTTPError\u001b[39m: 400 Client Error: Bad Request for url: https://dev.aiplatform.sompo-intl.com/semantic-search/api/middlemarketgb/indexes/default_semantic_search_index/search?indexVersion=3",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mHTTPError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m results = \u001b[43mdoc_ops\u001b[49m\u001b[43m.\u001b[49m\u001b[43msemantic_search\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[43m    \u001b[49m\u001b[43mquery\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mTheft Coverage\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdocument_ids\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdoc_id\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(results)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\mpalacios\\OneDrive - Sompo\\Documents\\Project Repo\\trial_project\\src\\services\\document_operations.py:20\u001b[39m, in \u001b[36mDocumentOperations.semantic_search\u001b[39m\u001b[34m(self, query, document_ids, **kwargs)\u001b[39m\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34msemantic_search\u001b[39m(\u001b[38;5;28mself\u001b[39m, query, document_ids, **kwargs):\n\u001b[32m---> \u001b[39m\u001b[32m20\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mapi\u001b[49m\u001b[43m.\u001b[49m\u001b[43msemantic_search\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdocument_ids\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\mpalacios\\OneDrive - Sompo\\Documents\\Project Repo\\trial_project\\src\\utils\\document_processing_api.py:316\u001b[39m, in \u001b[36mDocumentAPIClient.semantic_search\u001b[39m\u001b[34m(self, query, document_ids, search_index_name, search_index_version, embedding_deployment_name, embedding_model, vector_dimensions, k_nearest_neighbors, exhaustive, threshold, skip, take)\u001b[39m\n\u001b[32m    293\u001b[39m path = (\n\u001b[32m    294\u001b[39m     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m/semantic-search/api/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.client\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/indexes/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msearch_index_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/search\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    295\u001b[39m     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m?indexVersion=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msearch_index_version\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    296\u001b[39m )\n\u001b[32m    298\u001b[39m payload = {\n\u001b[32m    299\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mdocumentIds\u001b[39m\u001b[33m\"\u001b[39m: document_ids,\n\u001b[32m    300\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mquery\u001b[39m\u001b[33m\"\u001b[39m: query,\n\u001b[32m   (...)\u001b[39m\u001b[32m    313\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mtake\u001b[39m\u001b[33m\"\u001b[39m: take,\n\u001b[32m    314\u001b[39m }\n\u001b[32m--> \u001b[39m\u001b[32m316\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mapi\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpost\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mjson\u001b[49m\u001b[43m=\u001b[49m\u001b[43mpayload\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\mpalacios\\OneDrive - Sompo\\Documents\\Project Repo\\trial_project\\src\\utils\\api_client.py:114\u001b[39m, in \u001b[36mAPIClient.post\u001b[39m\u001b[34m(self, path, data, json, files, headers)\u001b[39m\n\u001b[32m    106\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    107\u001b[39m     response = requests.post(\n\u001b[32m    108\u001b[39m         \u001b[38;5;28mself\u001b[39m._full_url(path),\n\u001b[32m    109\u001b[39m         data=data,\n\u001b[32m   (...)\u001b[39m\u001b[32m    112\u001b[39m         headers={**\u001b[38;5;28mself\u001b[39m.headers, **(headers \u001b[38;5;129;01mor\u001b[39;00m {})}\n\u001b[32m    113\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m114\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_handle_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    115\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m requests.ConnectionError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m    116\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m requests.ConnectionError(\u001b[33m\"\u001b[39m\u001b[33mConnection error during POST request\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01me\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\mpalacios\\OneDrive - Sompo\\Documents\\Project Repo\\trial_project\\src\\utils\\api_client.py:55\u001b[39m, in \u001b[36mAPIClient._handle_response\u001b[39m\u001b[34m(self, response)\u001b[39m\n\u001b[32m     53\u001b[39m     response.raise_for_status()\n\u001b[32m     54\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m requests.HTTPError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m---> \u001b[39m\u001b[32m55\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m requests.HTTPError(\n\u001b[32m     56\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mHTTP error: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresponse.status_code\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m - \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresponse.text\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m     57\u001b[39m     ) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01me\u001b[39;00m\n\u001b[32m     59\u001b[39m content_type = response.headers.get(\u001b[33m\"\u001b[39m\u001b[33mContent-Type\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     60\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mapplication/json\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m content_type:\n",
+      "\u001b[31mHTTPError\u001b[39m: HTTP error: 400 - {\"type\":\"Bad Request\",\"title\":\"Error\",\"status\":400,\"detail\":\"Requested index is not configured for the client\",\"instance\":\"POST /api/middlemarketgb/indexes/default_semantic_search_index/search\",\"requestId\":\"0HNEFARKG3P4L:00000001\",\"traceId\":\"00-35d80affc2a5c00c3472ee24723e990a-5ebe8796d5c97d15-01\"}"
+     ]
+    }
+   ],
    "source": [
     "results = doc_ops.semantic_search(\n",
     "    query=\"Theft Coverage\",\n",
@@ -1976,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "147648d1",
    "metadata": {},
    "outputs": [
@@ -1996,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d9d2df0b",
    "metadata": {},
    "outputs": [
@@ -2120,7 +2141,7 @@
        "4  Cost Price \\nPer Unit (USD)  Cost Price\\nTotal (USD)  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
